@@ -4,6 +4,7 @@ v1.06 (????/??/??) Michal Špaček
 - Add Test::NoWarnings to tests.
 - Move runtrans to App::MetaTrans::Runtrans module.
 - Move metatrans to App::MetaTrans module.
+- Move MetaTrans::WordbookCz to standalone Perl module.
 - Rewrote cvs revision numbers to static numbers 
 - Rewrite build system.
 - Rewrite tests to my standard tests.
